<?php
/**
 *  @generated
 */

namespace Overblog\ThriftBundle\Model\Comment\Enum;

$GLOBALS['\Overblog\ThriftBundle\Model\Comment\E_State'] = array(
  'STATE_NOT_APPROVED' => 0,
  'STATE_APPROVED' => 1,
  'STATE_DELETED' => 2,
  'STATE_SPAM' => 3,
);

final class State {
  const STATE_NOT_APPROVED = 0;
  const STATE_APPROVED = 1;
  const STATE_DELETED = 2;
  const STATE_SPAM = 3;
  static public $__names = array(
    0 => 'STATE_NOT_APPROVED',
    1 => 'STATE_APPROVED',
    2 => 'STATE_DELETED',
    3 => 'STATE_SPAM',
  );
}


